[package]
name = "pg_wire"
version = "0.7.0"
description = "Server Side implementation of PostgreSQL Wire Protocol"
license = "Apache-2.0"
repository = "https://github.com/alex-dukhno/pg_wire"
keywords = ["protocol", "postgresql", "postgres", "database"]
authors = ["Alex Dukhno <alex.dukhno@icloud.com>", "Steven <asongala@163.com>"]
edition = "2018"
include = [
    "src/**/*.rs",
    "Cargo.toml",
]

[features]
default = []
async_net = ["async-io", "blocking"]
tokio_net = ["tokio", "tokio-native-tls"]
mock_net = []

[dependencies]
pg_wire_payload = { path = "payload", version = "0.1.0" }

async-mutex = "1.4.0"
async-io = { version = "1.3.1", optional = true }
blocking = { version = "1.0.0", optional = true }
cfg-if = "1.0.0"
tokio = { version = "1.4.0", optional = true, features = ["net", "fs", "io-util"]}
tokio-native-tls = { version = "0.3.0", optional = true }
futures-lite = "1.11.3"
rand_core = "0.6.2"
rand = "0.7"
native-tls = "0.2.7"

[dev-dependencies]
rstest = "0.7.0"
smol = "1.2.5"
tokio = { version = "1.4.0", features = ["net", "io-util", "rt", "rt-multi-thread"]}

[workspace]
